добавил генерацию клиента и обновил operation-id tool, теперь он генерирует из спецификации мидлвары для ручки
