# standart-server/pkg/openapi/operations_v1/operations.go
@@ -1,14 +1,30 @@
 // Code generated by op-id-gen; DO NOT EDIT.
 package operations_v1
 
+// Operation IDs
 const (
 	GetTaskByID = "GetTaskByID"
 	PatchTaskByID = "PatchTaskByID"
 )
 
-// PathToOperationID мапит "METHOD Path" на OperationID
-// Пример ключа: "GET /api/v1/tasks/{id}"
+// Middleware Names
+const (
+	MwAdmin = "admin"
+	MwAuth = "auth"
+)
+
 var PathToOperationID = map[string]string{
-	"GET /tasks/{id}": GetTaskByID,
-	"PATCH /tasks/{id}": PatchTaskByID,
+	"GET /api/v1/tasks/{id}": GetTaskByID,
+	"PATCH /api/v1/tasks/{id}": PatchTaskByID,
+}
+
+var OperationMiddlewares = map[string][]string{
+	GetTaskByID: {
+		MwAuth,
+		MwAdmin,
+	},
+	PatchTaskByID: {
+		MwAdmin,
+		MwAuth,
+	},
 }
